2002-08-07  Clint Adams  <clint@zsh.org>

	* 17509 &a., Completion/Unix/Command/_lynx: merge various changes from
	4.1 branch.

2002-08-06  Clint Adams  <clint@zsh.org>

	* 17508: Completion/Unix/Type/_urls: complete local files after
	file://localhost/ .

	* 17507: Completion/Unix/Type/_urls: complete local files after
	file:/// .

2002-08-05  Oliver Kiddle  <opk@zsh.org>

	* 17503: Doc/Zsh/builtins.yo, Doc/Zsh/compsys.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/params.yo: fix various typos, spelling mistakes and poor
	wordings in docs

	* Akinori Musha: 17499: Completion/BSD/Command/_bsd_pkg: BSD pkg_*
	tools now support bzip2'd packages

2002-08-01  Peter Stephenson  <pws@csr.com>

	* 17497: Src/builtin.c: getopts skipped over zero-length arguments.

2002-07-25  Peter Stephenson  <pws@csr.com>

	* 17481: Etc/MACHINES: from Karl Tomlinson
	<k.tomlinson@auckland.ac.nz>: the SGI compiler needs to be told
	to turn off variable length arrays.

2002-07-24  Clint Adams  <clint@zsh.org>

	* 17479: Doc/Zsh/arith.yo: fix typo noticed by Martin Pool.

        * 17478: Completion/Debian/Command/_bts: new tags for sarge.

2002-07-22  Clint Adams  <clint@zsh.org>

        * 17476: Completion/Unix/Command/.distfiles, 
        Completion/Unix/Command/_global,
        Completion/Unix/Command/_global_tags: Matt Zimmerman's
        completion for GNU GLOBAL.

        * Akira, 17459: Completion/Unix/Command/_cvs: exclude files which have
        RCS kflags for cvs add.

2002-07-01  Clint Adams  <clint@zsh.org>

	* 17391: Completion/Debian/Command/_dpkg: complete files after
	dpkg -S.

2002-06-26  Bart Schaefer  <schaefer@zsh.org>

	* 17357: Src/mkbltnmlst.sh: predefine autoloads for zsh emulation
	mode only, not sh/ksh/etc. modes.

2002-06-22  Bart Schaefer  <schaefer@zsh.org>

	* users/5073: Completion/compdump: use `typeset +f' instead of
	`whence -w' to get names of completion functions.

2002-06-14  Peter Stephenson  <pws@csr.com>
